started on contact form

--- a/contact-us.html
+++ b/contact-us.html
@@ -5,10 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Explore Washington</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <section class="nav-bar"></section>
+    <section>
+        <div class="container">
+            <h2>Contact Us</h2>
+            <form class="column contact-us-form">
+                <label>First Name</label>
+                <input type="text" placeholder="Jason">
+                <label>Last Name</label>
+                <input type="text" placeholder="Bourne">
+                <label>Email</label>
+                <input type="text" placeholder="explorewa@hotmail.com">
+            </form>
+        </div>
+    </section>
 </body>
 
 </html>
