--- a/index.html
+++ b/index.html
@@ -8,11 +8,97 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Explore Washington</title>
 </head>
 
 <body>
+    <section class="nav-section">
+        <nav>
+            <ul class="nav-bar">
+                <li class="nav-element"><img id="nav-logo" src="/img/Wanderlust_Logo_Nav.png"
+                        alt="website logo. bear shilloette, with mountains and trees inside of it."></li>
+                <!-- Externally links to  https://parks.wa.gov"-->
+                <li class="nav-element"><a href="https://parks.wa.gov/" target="_blank">Parks</a></li>
+                <li class="nav-element"><a href="cities.html">Cities</a></li>
+                <li class="nav-element"><a href="history.html">History</a></li>
+                <li class="nav-element"><a href="arts-and-culture.html">Arts & Culture</a></li>
+                <li class="nav-element"><a href="contact-us.html">Contact</a></li>
 
+            </ul>
+        </nav>
+    </section>
+    <section class="hero-section">
+        <div>
+            <h1>Welcome to Washington</h1>
+        </div>
+    </section>
+    <section class="content-section">
+        <div class="content-header">
+            <h2>Washington State</h2>
+            <hr class="content-hr">
+        </div>
+        <div class="content-box">
+            <div class="content-main">
+                <p class="content-main-p"></p>Welcome to Washington State, where adventure meets serenity and every
+                corner offers a new delight!
+                Nestled in the Pacific Northwest, Washington is a wonderland of diverse landscapes, vibrant cities,
+                and rich cultural experiences</p>
+                <p class="content-main-p">Start your journey in Seattle, the Emerald City, where the iconic Space Needle
+                    offers breathtaking
+                    views of the city and Puget Sound. Don't miss Pike Place Market, where you can watch fish fly, savor
+                    fresh seafood, and find unique treasures from local artisans. Coffee lovers, rejoice! Seattle is the
+                    birthplace of Starbucks, and the city's café culture is second to none.</p>
+                <p class="content-main-p">
+                    For outdoor enthusiasts, Washington is a paradise. Mount Rainier, an active volcano, towers
+                    majestically and offers fantastic hiking, skiing, and mountaineering. The Olympic Peninsula boasts
+                    lush rainforests, rugged coastlines, and the serene beauty of Olympic National Park. Don't forget
+                    the stunning North Cascades, often called the "American Alps," where you can explore pristine
+                    wilderness and sparkling alpine lakes.
+                </p>
+                <p class="content-main-p">
+                    Wine aficionados will find their haven in the rolling hills of the Yakima Valley and Walla Walla,
+                    where world-class wineries offer tastings with picturesque views. Craft beer enthusiasts can indulge
+                    in Washington's booming brewery scene, with countless options to sample locally crafted brews.
+                </p>
+                <p class="content-main-p">
+                    Washington's coastline is a treasure trove of charming seaside towns and stunning vistas. The San
+                    Juan Islands are perfect for whale watching, kayaking, and enjoying tranquil island life. On the
+                    Long Beach Peninsula, you can experience the thrill of flying a kite or simply relax on the
+                    expansive sandy shores.
+                </p>
+                <p class="content-main-p">
+                    Culture and history abound, from the Museum of Pop Culture (MoPOP) in Seattle to the historic towns
+                    of Leavenworth and Port Townsend. Whether you're exploring the vibrant arts scene, diving into the
+                    state's Native American heritage, or enjoying a local festival, there's always something happening.
+                </p>
+                <p class="content-main-p">
+                    Washington State is not just a place; it's an experience waiting to be discovered. Whether you're an
+                    adventurer, a foodie, a nature lover, or a culture seeker, Washington warmly welcomes you with open
+                    arms and endless possibilities. Come, explore, and make memories that will last a lifetime!
+                </p>
+            </div>
+            <aside class="content-aside">
+                <h2 class="aside-h2">5 Fun Facts about Washington</h2>
+                <ol>
+                    <li class="aside-li-item">The Washington State flag is the only one that's green.</li>
+                    <li class="aside-li-item">The square dance is Washington's Official State Dance.</li>
+                    <li class="aside-li-item">Richland, Washington is home to the largest freezer on earth.</li>
+                    <li class="aside-li-item">In Everett, it is illegal to put a hypnotized person on display in a store
+                        window.</li>
+                    <li class="aside-li-item">Pickleball was invented in Washington.</li>
+                </ol>
+            </aside>
+        </div>
+
+    </section>
+    <footer>
+        <img id="footer-logo" src="img/Wanderlust_Logo_Footer.png" alt="bear logo">
+        <div>
+            <img class="instagram-logo" src="WanderLust_IG.svg" alt="orange instagram logo">
+            <img class="facebook-logo" src="WanderLust-FB.svg" alt="orange facebook logo">
+        </div>
+    </footer>
 </body>
 
 </html>
