--- a/index.html
+++ b/index.html
@@ -92,6 +92,14 @@
         </div>
 
     </section>
+    <section class="card-section">
+        <div class="card-box">
+            <div class="card">Parks</div>
+            <div class="card">Cities</div>
+            <div class="card">History</div>
+            <div class="card">Arts & Culture</div>
+        </div>
+    </section>
     <footer>
         <img id="footer-logo" src="img/Wanderlust_Logo_Footer.png" alt="bear logo">
         <div>
