--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
     </section>
     <section class="card-section">
         <div class="card-box">
-            <div class="card">Parks</div>
-            <div class="card">Cities</div>
-            <div class="card">History</div>
-            <div class="card">Arts & Culture</div>
+            <div class="card parks"><a href="https://parks.wa.gov/" target="_blank">Parks</a></div>
+            <div class="card cities"><a href="cities.html">Cities</a></div>
+            <div class="card history"><a href="history.html">History</a></div>
+            <div class="card culture"><a href="arts-and-culture.html">Arts & Culture</a></div>
         </div>
     </section>
     <footer>
