--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <body>
     <section class="nav-section">
+        <!--- Nav tag -->
         <nav>
             <ul class="nav-bar">
                 <li class="nav-element"><img id="nav-logo" src="/img/Wanderlust_Logo_Nav.png"
@@ -29,12 +30,16 @@
         </nav>
     </section>
     <section class="hero-section">
-        <div>
+
+        <!---Header tag -->
+        <header>
             <h1>Welcome to Washington</h1>
-        </div>
+        </header>
+
     </section>
     <section class="content-section">
         <div class="content-header">
+
             <h2>Washington State</h2>
             <hr class="content-hr">
         </div>
