staged nav/footer on remaining pages

--- a/cities.html
+++ b/cities.html
@@ -40,10 +40,6 @@
             <hr class="content-hr">
         </div>
         <div class="content-box">
-            <!--- Table -->
-            <div class="city-table">
-
-            </div>
             <div class="cities-main">
                 <!-- Olympia Card -->
                 <div class="city-card">
@@ -58,6 +54,7 @@
                             $62,000, slightly below the state average of $74,000, reflecting a diverse economic base
                             with significant public sector employment. Overall, Olympia combines natural beauty, a rich
                             history, and a dynamic economy, making it a unique and appealing city.</p>
+
                     </div>
                 </div>
                 <!-- Seattle Card -->
@@ -109,20 +106,29 @@
                 </div>
             </div>
             <aside class="content-aside">
-                <h2 class="aside-h2">5 Fun Facts about Washington</h2>
-                <ol>
-                    <li class="aside-li-item">The Washington State flag is the only one that's green.</li>
-                    <li class="aside-li-item">The square dance is Washington's Official State Dance.</li>
-                    <li class="aside-li-item">Richland, Washington is home to the largest freezer on earth.</li>
-                    <li class="aside-li-item">In Everett, it is illegal to put a hypnotized person on display in a store
-                        window.</li>
-                    <li class="aside-li-item">Pickleball was invented in Washington.</li>
-                </ol>
+                <div>
+                    <h2 class="aside-h2">5 Fun Facts about Washington</h2>
+                    <ol>
+                        <li class="aside-li-item">The Washington State flag is the only one that's green.</li>
+                        <li class="aside-li-item">The square dance is Washington's Official State Dance.</li>
+                        <li class="aside-li-item">Richland, Washington is home to the largest freezer on earth.</li>
+                        <li class="aside-li-item">In Everett, it is illegal to put a hypnotized person on display in a
+                            store
+                            window.</li>
+                        <li class="aside-li-item">Pickleball was invented in Washington.</li>
+                    </ol>
+                </div>
             </aside>
         </div>
 
     </section>
+    <section class="table-section">
+        <!--- Table -->
+        <div class="city-table">
 
+        </div>
+
+    </section>
     <footer>
         <img id="footer-logo" src="img/Wanderlust_Logo_Footer.png" alt="bear logo">
         <div>
