Started Arts & culture page

--- a/arts-and-culture.html
+++ b/arts-and-culture.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="nav-section">
+    <header class="nav-section">
         <!--- Nav tag -->
         <nav>
             <ul class="nav-bar">
@@ -28,14 +28,9 @@
 
             </ul>
         </nav>
-    </section>
+    </header>
     <section class="hero-section">
-
-        <!---Header tag -->
-        <header>
-            <h1>History of Washington</h1>
-        </header>
-
+        <h1>History of Washington</h1>
     </section>
     <section class="content-section">
         <div class="content-header">
@@ -61,7 +56,15 @@
         </div>
 
     </section>
+    <!---Photo Gallery made with HTML Table--->
+    <section class="photo-table">
+        <table>
+            <tr>
+                <H2>Photos</H2>
+            </tr>
 
+        </table>
+    </section>
     <footer>
         <img id="footer-logo" src="img/Wanderlust_Logo_Footer.png" alt="bear logo">
         <div>
