--- a/cities.html
+++ b/cities.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="nav-section">
+    <header class="nav-section">
         <nav>
             <ul class="nav-bar">
                 <li class="nav-element"><a href="index.html"><img id="nav-logo" src="/img/Wanderlust_Logo_Nav.png"
@@ -27,12 +27,12 @@
 
             </ul>
         </nav>
-    </section>
+    </header>
     <section class="cities-hero-section">
-        <!---Header tag -->
-        <header>
-            <h1>Discover Washington's Cities</h1>
-        </header>
+
+
+        <h1>Discover Washington's Cities</h1>
+
     </section>
     <section class="content-section">
         <div class="content-header">
