--- a/contact-us.html
+++ b/contact-us.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="nav-section">
+    <header class="nav-section">
         <!--- Nav tag -->
         <nav>
             <ul class="nav-bar">
@@ -25,17 +25,11 @@
                 <li class="nav-element"><a href="history.html">History</a></li>
                 <li class="nav-element"><a href="arts-and-culture.html">Arts & Culture</a></li>
                 <li class="nav-element"><a href="contact-us.html">Contact</a></li>
-
             </ul>
         </nav>
-    </section>
+    </header>
     <section class="hero-section">
-
-        <!---Header tag -->
-        <header>
-            <h1>History of Washington</h1>
-        </header>
-
+        <h1>History of Washington</h1>
     </section>
     <section class="content-section">
         <div class="content-header">
