--- a/history.html
+++ b/history.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="nav-section">
+    <header class="nav-section">
         <!--- Nav tag -->
         <nav>
             <ul class="nav-bar">
@@ -28,13 +28,9 @@
 
             </ul>
         </nav>
-    </section>
-    <section class="hero-section">
-
-        <!---Header tag -->
-        <header>
-            <h1>History of Washington</h1>
-        </header>
+    </header>
+    <section class="history-hero-section">
+        <h1>History of Washington</h1>
 
     </section>
     <section class="content-section">
@@ -45,18 +41,90 @@
         </div>
         <div class="content-box">
             <div class="content-main">
-
+                <p>Washington State, located in the Pacific Northwest region of the United States, has a rich and
+                    diverse history that spans thousands of years, beginning with its indigenous peoples. Long before
+                    European explorers arrived, the region was inhabited by various Native American tribes, including
+                    the Coast Salish, Yakama, and Nez Perce, among others. These tribes had complex societies, with rich
+                    traditions and economies based on fishing, hunting, and trading. The arrival of European explorers
+                    in the 18th century marked the beginning of significant changes for the region.</p>
+                <p>The first recorded European contact was by Spanish explorers, with Bruno de Heceta mapping the
+                    coastline in 1775. However, it was the British explorer George Vancouver in 1792 who extensively
+                    charted Puget Sound, leaving a lasting legacy through the names he bestowed on the region's
+                    geographical features. The early 19th century saw increased exploration and the establishment of
+                    trading posts, such as John Jacob Astor’s Fort Astoria in 1811, which was the first permanent
+                    American settlement in the Pacific Northwest. The Oregon Trail brought an influx of settlers in the
+                    mid-19th century, and the Oregon Treaty of 1846 established the 49th parallel as the boundary
+                    between British and American territories.</p>
+                <p>Washington became a separate territory from Oregon in 1853, named after the first U.S. president,
+                    George Washington. The territory saw rapid growth and development, especially with the arrival of
+                    the railroad and the subsequent economic boom driven by the lumber industry. In 1889, Washington was
+                    admitted to the Union as the 42nd state. The early 20th century was marked by significant events
+                    such as the Alaska-Yukon-Pacific Exposition in Seattle in 1909, showcasing the state's emerging
+                    importance as a hub for trade and culture. The Great Depression hit Washington hard, but federal
+                    projects like the construction of the Grand Coulee Dam provided much-needed jobs and infrastructure.
+                </p>
+                <p>World War II brought further transformation as Washington became a center for military production,
+                    notably through Boeing’s aircraft manufacturing and the establishment of the Hanford Site for the
+                    Manhattan Project. The post-war period saw continued growth, with Seattle hosting the 1962 Century
+                    21 Exposition, which left iconic structures like the Space Needle. The late 20th century was marked
+                    by environmental and social movements, including the Boldt Decision of 1974 affirming Native
+                    American fishing rights and the eruption of Mount St. Helens in 1980, a major geological event.</p>
+                <p>In recent decades, Washington has evolved into a tech powerhouse, with companies like Microsoft and
+                    Amazon driving economic growth and transforming the region into a global technology hub. The state
+                    has also been at the forefront of social and environmental initiatives, including the legalization
+                    of recreational marijuana in 2012 and significant police reforms following the Black Lives Matter
+                    movement. Washington's response to the COVID-19 pandemic and the protests in Seattle in 2020 further
+                    underscore its dynamic and progressive character, reflecting its long history of resilience and
+                    innovation.</p>
             </div>
             <aside class="content-aside">
-                <h2 class="aside-h2">5 Fun Facts about Washington</h2>
-                <ol>
-                    <li class="aside-li-item">The Washington State flag is the only one that's green.</li>
-                    <li class="aside-li-item">The square dance is Washington's Official State Dance.</li>
-                    <li class="aside-li-item">Richland, Washington is home to the largest freezer on earth.</li>
-                    <li class="aside-li-item">In Everett, it is illegal to put a hypnotized person on display in a store
-                        window.</li>
-                    <li class="aside-li-item">Pickleball was invented in Washington.</li>
-                </ol>
+                <h2 class="aside-h2" style="text-align: center;">Significant events in Washington State history</h2>
+                <ul>
+                    <li class="aside-li-item">Pre-Columbian Era: Indigenous tribes, including the Coast Salish, Yakama,
+                        Nez Perce, and others, inhabit the region.</li>
+                    <li class="aside-li-item">1775: Spanish explorer Bruno de Heceta maps the coastline of Washington.
+                    </li>
+                    <li class="aside-li-item">1792: British explorer George Vancouver explores Puget Sound, naming many
+                        of its features.</li>
+                    <li class="aside-li-item">1805-1806: Lewis and Clark Expedition traverses the Columbia River region.
+                    </li>
+                    <li class="aside-li-item">1811: John Jacob Astor's Pacific Fur Company establishes Fort Astoria, the
+                        first permanent American settlement in the Pacific Northwest.</li>
+                    <li class="aside-li-item">1846: The Oregon Treaty establishes the boundary between British and
+                        American territories at the 49th parallel.</li>
+                    <li class="aside-li-item">1853: Washington Territory is created, separating from the Oregon
+                        Territory.</li>
+                    <li class="aside-li-item">1855-1856: Treaty negotiations lead to conflicts between Native American
+                        tribes and settlers, including the Yakima War.</li>
+                    <li class="aside-li-item">1879: Seattle, Tacoma, and other cities begin rapid growth due to the
+                        lumber industry.</li>
+                    <li class="aside-li-item">1889: Washington is admitted as the 42nd state of the United States on
+                        November 11.</li>
+                    <li class="aside-li-item">1909: Seattle hosts the Alaska-Yukon-Pacific Exposition, promoting the
+                        city as the gateway to Alaska and Asia.</li>
+                    <li class="aside-li-item">1930s: The Great Depression impacts Washington, but New Deal projects,
+                        such as Grand Coulee Dam construction, provide jobs and economic stimulus.</li>
+                    <li class="aside-li-item">1941-1945: During World War II, the Boeing Company expands significantly,
+                        producing military aircraft. The Hanford Site is established as part of the Manhattan Project.
+                    </li>
+                    <li class="aside-li-item">1962: Seattle hosts the Century 21 Exposition (World's Fair), leading to
+                        the construction of the Space Needle</li>
+                    <li class="aside-li-item">1970: The first Earth Day is celebrated, inspired in part by Washington
+                        State Senator Gaylord Nelson.</li>
+                    <li class="aside-li-item">1974: The Boldt Decision affirms Native American fishing rights in
+                        Washington.</li>
+                    <li class="aside-li-item">1980: Mount St. Helens erupts on May 18, causing significant destruction
+                        and loss of life.</li>
+                    <li class="aside-li-item">1999: The WTO protests (Battle of Seattle) take place, highlighting issues
+                        of globalization and trade.</li>
+                    <li class="aside-li-item">2000s: Washington's tech industry, led by companies like Microsoft and
+                        Amazon, fuels economic growth and population increase.</li>
+                    <li class="aside-li-item">2012: Washington becomes one of the first states to legalize recreational
+                        marijuana.</li>
+                    <li class="aside-li-item">Washington becomes one of the first states hit by the COVID-19 pandemic,
+                        implementing early lockdown measures.</li>
+
+                </ul>
             </aside>
         </div>
 
