--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="nav-section">
+    <header class="nav-section">
         <!--- Nav tag -->
         <nav>
             <ul class="nav-bar">
@@ -28,7 +28,7 @@
 
             </ul>
         </nav>
-    </section>
+    </header>
     <section class="hero-section">
 
         <!---Header tag -->
