created hero image

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <section class="hero-section">
 
         <!---Header tag -->
-        <header>
-            <h1>Welcome to Washington</h1>
-        </header>
+     <div class="hero-image">
+            <h1 class="hero-text">Welcome to Washington</h1>
+        </div>  
 
     </section>
     <section class="content-section">
