fixed logo mapping

--- a/cities.html
+++ b/cities.html
@@ -16,7 +16,7 @@
     <header class="nav-section">
         <nav>
             <ul class="nav-bar">
-                <li class="nav-element"><a href="index.html"><img id="nav-logo" src="/img/Wanderlust_Logo_Nav.png"
+                <li class="nav-element"><a href="index.html"><img id="nav-logo" src="img/Wanderlust-logo-nav.png"
                             alt="website logo. bear shilloette, with mountains and trees inside of it."></a></li>
                 <!-- Externally links to  https://parks.wa.gov"-->
                 <li class="nav-element"><a href="https://parks.wa.gov/" target="_blank">Parks</a></li>
