--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!--- Nav tag -->
         <nav>
             <ul class="nav-bar">
-                <li class="nav-element"><img id="nav-logo" src="/img/Wanderlust_Logo_Nav.png"
+                <li class="nav-element"><img id="nav-logo" src="img/Wanderlust-logo-nav.png"
                         alt="website logo. bear shilloette, with mountains and trees inside of it."></li>
                 <!-- Externally links to  https://parks.wa.gov"-->
                 <li class="nav-element"><a href="https://parks.wa.gov/" target="_blank">Parks</a></li>
