--- a/arts-and-culture.html
+++ b/arts-and-culture.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Explore Washington</title>
+    <title>Explore Washington | Arts & Culture</title>
 </head>
 
 <body>
