All Requirements met

--- a/cities.html
+++ b/cities.html
@@ -105,7 +105,7 @@
                     <div><img class="city-img" src="img/poulsbo-img.jpg"></div>
                 </div>
             </div>
-            <aside class="content-aside">
+            <aside class="cities-aside">
                 <div>
                     <h2 class="aside-h2">5 Fun Facts about Washington</h2>
                     <ol>
