--- a/cities.html
+++ b/cities.html
@@ -43,7 +43,7 @@
             <div class="cities-main">
                 <!-- Olympia Card -->
                 <div class="city-card">
-                    <div><img class="city-img" src="img/olympia-img.jpg" alt="overhead view of "></div>
+                    <div><img class="city-img" src="img/olympia-img.jpg" alt="overhead view of olympia washington "></div>
                     <div class="city-content">
                         <h2>Olympia, Washington</h2>
                         <p>Olympia, the capital city of Washington State, has a population of about 55,000 as of 2023.
@@ -71,11 +71,11 @@
                             $74,000. Seattle's combination of economic opportunities, scenic waterfront, and urban
                             vitality makes it a highly dynamic and attractive city.</p>
                     </div>
-                    <div><img class="city-img" src="img/seattle-img.jpg"></div>
+                    <div><img class="city-img" src="img/seattle-img.jpg" alt="image of space needle, and mt reiner"></div>
                 </div>
                 <!-- Leavanworth Card -->
                 <div class="city-card">
-                    <div><img class="city-img" src="img/leavanworth-img.jpg"></div>
+                    <div><img class="city-img" src="img/leavanworth-img.jpg" alt="streetview of Leavenworth WA"></div>
                     <div class="city-content">
                         <h2>Leavenworth, Washington</h2>
                         <p>
@@ -102,7 +102,7 @@
                             charm, scenic waterfront, and cultural richness make it a desirable place to live and visit.
                         </p>
                     </div>
-                    <div><img class="city-img" src="img/poulsbo-img.jpg"></div>
+                    <div><img class="city-img" src="img/poulsbo-img.jpg" alt="view of front street poulsbo washington"></div>
                 </div>
             </div>
             <aside class="cities-aside">
