Project ready for Initial Submission.

--- a/arts-and-culture.html
+++ b/arts-and-culture.html
@@ -87,7 +87,21 @@
                 </td>
                 <td class="arts-td"><img src="img/table-img-2.jpg" alt="Pikes place market at night" class="table-img">
                 </td>
-                <td></td>
+                <td class="arts-td"><img src="img/table-img-3.jpg" alt="Native american sheild" class="table-img">
+            </tr>
+            <tr>
+                <td class="arts-td"><img src="img/table-img-4.jpg" alt="inside of 5th Avenue" class="table-img">
+                </td>
+                <td class="arts-td"><img src="img/table-img-5.jpg" alt="Native american bust" class="table-img">
+                </td>
+                <td class="arts-td"><img src="img/table-img-6.jpg" alt="Chihuly garden and glass" class="table-img">
+            </tr>
+            <tr>
+                <td class="arts-td"><img src="img/table-img-7.jpg" alt="native american boat" class="table-img">
+                </td>
+                <td class="arts-td"><img src="img/table-img-8.jpg" alt="inside of the show box" class="table-img">
+                </td>
+                <td class="arts-td"><img src="img/table-img-9.jpg" alt="inside the paramount" class="table-img">
             </tr>
         </table>
     </section>
