corrected file names and added comment

--- a/arts-and-culture.html
+++ b/arts-and-culture.html
@@ -80,6 +80,7 @@
         </div>
 
     </section>
+    <!--- Create a Photo gallery for fun -->
     <section class="photo-table-section">
         <table class="photo-table">
             <tr>
